ec2_instance.tf
resource "aws_instance" "my_tf_ec2" {
  ami           = "ami-0c42696027a8ede58"
  count         = 1
  instance_type = "t2.micro"
  tags          = { "Name" = "myy-machine" }

}
